Fixed glassmorphism backdrop filter's blur on IOS

--- a/css/style.css
+++ b/css/style.css
@@ -1280,7 +1280,7 @@ body.dark .Contato .textareaBox span {
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(20px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     width: 85%;
     height: fit-content;
@@ -1455,6 +1455,7 @@ body.dark .SobreMim .SobreMim-Content .descricao p {
     z-index: 1;
     padding: 20px;
     backdrop-filter: blur(25px);
+    -webkit-backdrop-filter: blur(25px);
     display: flex;
     flex-direction: column;
     justify-content: center;
